<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Mercury-SSH
  ~ Copyright (C) 2018 Skarafaz
  ~
  ~ This file is part of Mercury-SSH.
  ~
  ~ Mercury-SSH is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 2 of the License, or
  ~ (at your option) any later version.
  ~
  ~ Mercury-SSH is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with Mercury-SSH.  If not, see <http://www.gnu.org/licenses/>.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/settings_group_public_key">
        <Preference
                android:title="@string/settings_export_public_key"
                android:summary="@string/settings_export_public_key_summary">
            <intent
                    android:action="it.skarafaz.mercury.EXPORT_PUBLIC_KEY"
                    android:targetClass="it.skarafaz.mercury.activity.SettingsActivity"
                    android:targetPackage="it.skarafaz.mercury"/>
        </Preference>
        <Preference
                android:title="@string/settings_send_public_key"
                android:summary="@string/settings_send_public_key_summary">
            <intent
                    android:action="it.skarafaz.mercury.SEND_PUBLIC_KEY"
                    android:targetClass="it.skarafaz.mercury.activity.SettingsActivity"
                    android:targetPackage="it.skarafaz.mercury"/>
        </Preference>
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/settings_group_drive">
        <SwitchPreference
                android:key="settings_enable_drive"
                android:title="@string/settings_enable_drive"
                android:summary="@string/settings_enable_drive_summary"
                android:defaultValue="false"/>

        <Preference
                android:title="@string/settings_manage_drive_resources"
                android:dependency="settings_enable_drive">
            <intent
                    android:targetClass="it.skarafaz.mercury.activity.DriveResourcesActivity"
                    android:targetPackage="it.skarafaz.mercury"/>
        </Preference>
    </PreferenceCategory>

</PreferenceScreen>
